# GOs

./: GO_Fundamental_Overview.ipynb  GO_Fundamentals.ipynb  GO_Price_Data.ipynb  Hydro_Balance.ipynb  Hydro_Generation.ipynb  Hydro_Levels.ipynb  README.md  Solar_Generation.ipynb  Trading_Strategies.md  Wind_Generation.ipynb  pyproject.toml
Hydro/: Hydro_Balance.ipynb  Hydro_Generation.ipynb
Solar/: Solar_Generation.ipynb
Wind/: Wind_Generation.ipynb
functions/: sql_data.py
