[tool.poetry]
name = "GOs"
version = "0.1.0"
description = ""
authors = ["Kasper Funch Dubery <kad@in-commodities.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.1.3"
pyodbc = "^5.0.1"
sqlalchemy = "^2.0.44"
openpyxl = "^3.1.5"
ep-functions-library = { version = "0.1.6", source = "eu-ep-python" }

kad-functions = { path = "../functions", develop = true }
matplotlib = "^3.10.7"
statsmodels = "^0.14.5"
searoute = "^1.4.3"
cartopy = "^0.25.0"
psycopg2-binary = "^2.9.12"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]

[[tool.poetry.source]]
name = "eu-ep-python"
url = "https://incom.jfrog.io/artifactory/api/pypi/eu-ep-python/simple"
priority = "supplemental"
