[tool.poetry]
name = "GOs"
version = "0.1.0"
description = ""
authors = ["Kasper Funch Dubery <kad@in-commodities.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.1.3"
pyodbc = "^5.0.1"
sqlalchemy = "^2.0.44"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
